--- a/index.html
+++ b/index.html
@@ -1,212 +1,243 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Галерея изображений</title>
-    <style>
-        body {
-            margin: 0;
-            font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            min-height: 100vh;
-        }
-        .gallery-container {
-            max-width: 1200px;
-            width: 100%;
-            padding: 20px;
-            box-sizing: border-box;
-        }
-        .controls {
-            margin-bottom: 20px;
-            display: flex;
-            gap: 10px;
-            flex-wrap: wrap;
-            justify-content: center;
-        }
-        .gallery {
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-            gap: 10px;
-        }
-        .gallery img {
-            width: 100%;
-            height: 150px;
-            object-fit: cover;
-            cursor: pointer;
-            border-radius: 5px;
-            transition: transform 0.2s;
-        }
-        .gallery img:hover {
-            transform: scale(1.05);
-        }
-        .fullscreen {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: rgba(0, 0, 0, 0.9);
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            z-index: 1000;
-        }
-        .fullscreen img {
-            max-width: 90%;
-            max-height: 90%;
-            object-fit: contain;
-        }
-        .fullscreen-controls {
-            position: absolute;
-            top: 20px;
-            right: 20px;
-            display: flex;
-            gap: 10px;
-        }
-        button, select, input {
-            padding: 8px 12px;
-            font-size: 16px;
-            cursor: pointer;
-            border: none;
-            border-radius: 5px;
-            background-color: #007bff;
-            color: white;
-        }
-        button:hover, select:hover {
-            background-color: #0056b3;
-        }
-    </style>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Галерея изображений</title>
+<style>
+  body {
+    font-family: Arial, sans-serif;
+    margin: 20px;
+    background: #222;
+    color: #eee;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  #gallery {
+    margin-top: 20px;
+    max-width: 90vw;
+    max-height: 80vh;
+    border: 2px solid #555;
+    background: #000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    touch-action: pan-y; /* чтобы свайпы горизонтальные ловить */
+  }
+  #gallery img {
+    max-width: 100%;
+    max-height: 80vh;
+    object-fit: contain;
+    user-select: none;
+    -webkit-user-drag: none;
+  }
+  .controls {
+    margin-top: 15px;
+    display: flex;
+    gap: 15px;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  button, select {
+    padding: 8px 14px;
+    font-size: 1rem;
+    border-radius: 5px;
+    border: none;
+    cursor: pointer;
+    background: #444;
+    color: #eee;
+    transition: background 0.3s;
+  }
+  button:hover, select:hover {
+    background: #666;
+  }
+</style>
 </head>
 <body>
-    <div class="gallery-container">
-        <div class="controls">
-            <input type="file" id="fileInput" accept="image/*" multiple>
-            <button onclick="toggleRandomSlideshow()">Случайный показ</button>
-            <select id="intervalSelect" onchange="updateInterval()">
-                <option value="2">2 секунды</option>
-                <option value="3">3 секунды</option>
-                <option value="5">5 секунд</option>
-                <option value="7">7 секунд</option>
-            </select>
-        </div>
-        <div class="gallery" id="gallery"></div>
-    </div>
 
-    <div class="fullscreen" id="fullscreen" style="display: none;">
-        <img id="fullscreenImage" src="">
-        <div class="fullscreen-controls">
-            <button onclick="prevImage()">Назад</button>
-            <button onclick="nextImage()">Вперед</button>
-            <button onclick="exitFullscreen()">Закрыть</button>
-        </div>
-    </div>
+<h1>Галерея изображений</h1>
 
-    <script>
-        let images = [];
-        let currentIndex = 0;
-        let slideshowInterval = null;
-        let isSlideshowRunning = false;
+<input type="file" id="fileInput" accept="image/*" multiple />
 
-        // Загрузка изображений
-        document.getElementById('fileInput').addEventListener('change', (event) => {
-            const files = event.target.files;
-            images = [];
-            const gallery = document.getElementById('gallery');
-            gallery.innerHTML = '';
+<div id="gallery">
+  <p>Загрузите изображения</p>
+</div>
 
-            for (let file of files) {
-                const url = URL.createObjectURL(file);
-                images.push(url);
-                const img = document.createElement('img');
-                img.src = url;
-                img.onclick = () => showFullscreen(url, images.indexOf(url));
-                gallery.appendChild(img);
-            }
-        });
+<div class="controls">
+  <button id="prevBtn" disabled>Назад</button>
+  <button id="nextBtn" disabled>Вперед</button>
+  <button id="fullscreenBtn" disabled>Полный экран</button>
+  
+  <label for="intervalSelect">Интервал показа:</label>
+  <select id="intervalSelect" disabled>
+    <option value="2000">2 с</option>
+    <option value="3000" selected>3 с</option>
+    <option value="5000">5 с</option>
+    <option value="7000">7 с</option>
+  </select>
+  
+  <button id="randomSlideshowBtn" disabled>Запустить слайдшоу (рандом)</button>
+  <button id="stopSlideshowBtn" disabled>Остановить слайдшоу</button>
+</div>
 
-        // Полноэкранный режим
-        function showFullscreen(url, index) {
-            currentIndex = index;
-const fullscreen = document.getElementById('fullscreen');
-            const fullscreenImage = document.getElementById('fullscreenImage');
-            fullscreenImage.src = url;
-            fullscreen.style.display = 'flex';
-        }
+<script>
+  const fileInput = document.getElementById('fileInput');
+  const gallery = document.getElementById('gallery');
+  const prevBtn = document.getElementById('prevBtn');
+  const nextBtn = document.getElementById('nextBtn');
+  const fullscreenBtn = document.getElementById('fullscreenBtn');
+  const intervalSelect = document.getElementById('intervalSelect');
+  const randomSlideshowBtn = document.getElementById('randomSlideshowBtn');
+  const stopSlideshowBtn = document.getElementById('stopSlideshowBtn');
 
-        // Закрытие полноэкранного режима
-        function exitFullscreen() {
-            document.getElementById('fullscreen').style.display = 'none';
-            stopSlideshow();
-        }
+  let images = [];
+  let currentIndex = 0;
+  let slideshowTimer = null;
 
-        // Переключение на предыдущее изображение
-        function prevImage() {
-            if (images.length === 0) return;
-            currentIndex = (currentIndex - 1 + images.length) % images.length;
-            document.getElementById('fullscreenImage').src = images[currentIndex];
-        }
+  function updateGallery() {
+    gallery.innerHTML = '';
+    if (images.length === 0) {
+      gallery.innerHTML = '<p>Загрузите изображения</p>';
+      prevBtn.disabled = true;
+      nextBtn.disabled = true;
+      fullscreenBtn.disabled = true;
+      intervalSelect.disabled = true;
+      randomSlideshowBtn.disabled = true;
+      stopSlideshowBtn.disabled = true;
+      return;
+    }
+    
+    const img = document.createElement('img');
+    img.src = images[currentIndex];
+    img.alt = Изображение ${currentIndex + 1} из ${images.length};
+    gallery.appendChild(img);
+    
+    prevBtn.disabled = (currentIndex === 0);
+    nextBtn.disabled = (currentIndex === images.length - 1);
+    fullscreenBtn.disabled = false;
+    intervalSelect.disabled = false;
+    randomSlideshowBtn.disabled = false;
+    stopSlideshowBtn.disabled = slideshowTimer === null;
+  }
 
-        // Переключение на следующее изображение
-        function nextImage() {
-            if (images.length === 0) return;
-            currentIndex = (currentIndex + 1) % images.length;
-            document.getElementById('fullscreenImage').src = images[currentIndex];
-        }
+  fileInput.addEventListener('change', () => {
+    slideshowStop();
+    images.forEach(url => URL.revokeObjectURL(url)); // очищаем старые URL
+    images = [];
+    currentIndex = 0;
 
-        // Случайное изображение
-        function showRandomImage() {
-            if (images.length === 0) return;
-            currentIndex = Math.floor(Math.random() * images.length);
-            document.getElementById('fullscreenImage').src = images[currentIndex];
-            document.getElementById('fullscreen').style.display = 'flex';
-        }
+    const files = Array.from(fileInput.files);
+    if (files.length === 0) {
+      updateGallery();
+      return;
+    }
 
-        // Запуск/остановка слайдшоу
-        function toggleRandomSlideshow() {
-            if (isSlideshowRunning) {
-                stopSlideshow();
-            } else {
-                startSlideshow();
-            }
-        }
+    files.forEach(file => {
+      if (file.type.startsWith('image/')) {
+        const url = URL.createObjectURL(file);
+        images.push(url);
+      }
+    });
+    updateGallery();
+  });
 
-        // Запуск слайдшоу
-        function startSlideshow() {
-            if (images.length === 0) return;
-            isSlideshowRunning = true;
-            document.getElementById('fileInput').disabled = true;
-            showRandomImage();
-            const interval = parseInt(document.getElementById('intervalSelect').value) * 1000;
-            slideshowInterval = setInterval(showRandomImage, interval);
-        }
+  prevBtn.addEventListener('click', () => {
+    if (currentIndex > 0) {
+      currentIndex--;
+      updateGallery();
+    }
+  });
 
-        // Остановка слайдшоу
-        function stopSlideshow() {
-            isSlideshowRunning = false;
-            document.getElementById('fileInput').disabled = false;
-            clearInterval(slideshowInterval);
-        }
+  nextBtn.addEventListener('click', () => {
+    if (currentIndex < images.length - 1) {
+currentIndex++;
+      updateGallery();
+    }
+  });
 
-        // Обновление интервала слайдшоу
-        function updateInterval() {
-            if (isSlideshowRunning) {
-                stopSlideshow();
-                startSlideshow();
-            }
-        }
+  fullscreenBtn.addEventListener('click', () => {
+    if (gallery.requestFullscreen) {
+      gallery.requestFullscreen();
+    } else if (gallery.webkitRequestFullscreen) { /* Safari */
+      gallery.webkitRequestFullscreen();
+    } else if (gallery.msRequestFullscreen) { /* IE11 */
+      gallery.msRequestFullscreen();
+    }
+  });
 
-        // Обработка клавиш для навигации
-        document.addEventListener('keydown', (event) => {
-            if (document.getElementById('fullscreen').style.display === 'flex') {
-                if (event.key === 'ArrowLeft') prevImage();
-                if (event.key === 'ArrowRight') nextImage();
-                if (event.key === 'Escape') exitFullscreen();
-            }
-        });
-    </script>
+  function slideshowStart() {
+    if (images.length === 0) return;
+    randomSlideshowBtn.disabled = true;
+    stopSlideshowBtn.disabled = false;
+    intervalSelect.disabled = true;
+    prevBtn.disabled = true;
+    nextBtn.disabled = true;
+    fullscreenBtn.disabled = true;
+
+    slideshowTimer = setInterval(() => {
+      // Выбираем случайный индекс, отличный от текущего
+      let nextIndex;
+      do {
+        nextIndex = Math.floor(Math.random() * images.length);
+      } while (nextIndex === currentIndex && images.length > 1);
+
+      currentIndex = nextIndex;
+      updateGallery();
+    }, parseInt(intervalSelect.value));
+  }
+
+  function slideshowStop() {
+    if (slideshowTimer) {
+      clearInterval(slideshowTimer);
+      slideshowTimer = null;
+      updateGallery();
+    }
+  }
+
+  randomSlideshowBtn.addEventListener('click', slideshowStart);
+  stopSlideshowBtn.addEventListener('click', slideshowStop);
+
+  // При выходе из fullscreen включаем кнопки обратно
+  document.addEventListener('fullscreenchange', () => {
+    if (!document.fullscreenElement) {
+      updateGallery();
+    }
+  });
+
+  // Обработка свайпов для листания на мобильных устройствах
+  let touchStartX = 0;
+  let touchEndX = 0;
+
+  gallery.addEventListener('touchstart', (e) => {
+    touchStartX = e.changedTouches[0].screenX;
+  }, false);
+
+  gallery.addEventListener('touchend', (e) => {
+    touchEndX = e.changedTouches[0].screenX;
+    handleGesture();
+  }, false);
+
+  function handleGesture() {
+    const swipeThreshold = 50; // минимальное расстояние свайпа в пикселях
+    if (slideshowTimer) return; // не листаем, если слайдшоу идёт
+
+    if (touchEndX < touchStartX - swipeThreshold) {
+      // свайп влево — следующая картинка
+      if (currentIndex < images.length - 1) {
+        currentIndex++;
+        updateGallery();
+      }
+    }
+    if (touchEndX > touchStartX + swipeThreshold) {
+      // свайп вправо — предыдущая картинка
+      if (currentIndex > 0) {
+        currentIndex--;
+        updateGallery();
+      }
+    }
+  }
+</script>
+
 </body>
 </html>
