--- a/index.html
+++ b/index.html
@@ -1,43 +1,4 @@
-<script type="text/javascript">
-        var gk_isXlsx = false;
-        var gk_xlsxFileLookup = {};
-        var gk_fileData = {};
-        function filledCell(cell) {
-          return cell !== '' && cell != null;
-        }
-        function loadFileData(filename) {
-        if (gk_isXlsx && gk_xlsxFileLookup[filename]) {
-            try {
-                var workbook = XLSX.read(gk_fileData[filename], { type: 'base64' });
-                var firstSheetName = workbook.SheetNames[0];
-                var worksheet = workbook.Sheets[firstSheetName];
-
-                // Convert sheet to JSON to filter blank rows
-                var jsonData = XLSX.utils.sheet_to_json(worksheet, { header: 1, blankrows: false, defval: '' });
-                // Filter out blank rows (rows where all cells are empty, null, or undefined)
-                var filteredData = jsonData.filter(row => row.some(filledCell));
-
-                // Heuristic to find the header row by ignoring rows with fewer filled cells than the next row
-                var headerRowIndex = filteredData.findIndex((row, index) =>
-                  row.filter(filledCell).length >= filteredData[index + 1]?.filter(filledCell).length
-                );
-                // Fallback
-                if (headerRowIndex === -1 || headerRowIndex > 25) {
-                  headerRowIndex = 0;
-                }
-
-                // Convert filtered JSON back to CSV
-                var csv = XLSX.utils.aoa_to_sheet(filteredData.slice(headerRowIndex)); // Create a new sheet from filtered array of arrays
-                csv = XLSX.utils.sheet_to_csv(csv, { header: 1 });
-                return csv;
-            } catch (e) {
-                console.error(e);
-                return "";
-            }
-        }
-        return gk_fileData[filename] || "";
-        }
-        </script><!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -140,6 +101,18 @@
             border-radius: 5px;
         }
 
+        .image-counter {
+            position: absolute;
+            bottom: 10px;
+            left: 50%;
+            transform: translateX(-50%);
+            background: rgba(0, 0, 0, 0.7);
+            color: white;
+            padding: 5px 10px;
+            border-radius: 5px;
+            font-size: 16px;
+        }
+
         .fullscreen .image-container {
             position: fixed;
             top: 0;
@@ -178,6 +151,11 @@
                 padding: 10px;
                 font-size: 16px;
             }
+
+            .image-counter {
+                font-size: 14px;
+                padding: 3px 8px;
+            }
         }
     </style>
 </head>
@@ -200,6 +178,7 @@
                 <button onclick="prevImage()">◄</button>
                 <button onclick="nextImage()">►</button>
             </div>
+            <div class="image-counter" id="imageCounter">0/0</div>
         </div>
     </div>
 
@@ -214,6 +193,7 @@
         const intervalSelect = document.getElementById('intervalSelect');
         const imageContainer = document.getElementById('imageContainer');
         const galleryImage = document.getElementById('galleryImage');
+        const imageCounter = document.getElementById('imageCounter');
 
         folderInput.addEventListener('change', (event) => {
             images = [];
@@ -227,13 +207,19 @@
             if (images.length > 0) {
                 currentIndex = 0;
                 showImage(currentIndex);
+            } else {
+                imageCounter.textContent = '0/0';
             }
         });
 
         function showImage(index) {
-            if (images.length === 0) return;
+            if (images.length === 0) {
+                imageCounter.textContent = '0/0';
+                return;
+            }
             galleryImage.src = images[index];
             galleryImage.classList.add('active');
+            imageCounter.textContent = `${index + 1}/${images.length}`;
         }
 
         function nextImage() {
