--- a/index.html
+++ b/index.html
@@ -126,15 +126,22 @@
             max-height: 100vh;
             z-index: 1000;
             background-color: #000;
+            padding-bottom: 0; /* Ensure no overflow */
         }
 
         .fullscreen .gallery-image {
-            max-height: 100vh;
+            max-height: calc(100vh - 60px); /* Adjust for mobile browser UI (e.g., 60px for safe area) */
+            max-width: 100vw;
+            object-fit: contain;
         }
 
         .fullscreen .image-counter {
-            bottom: 20px;
-            font-size: 16px;
+            bottom: auto;
+            top: 10px;
+            right: 10px;
+            left: auto;
+            transform: none;
+            font-size: 12px; /* Reduced by 2px */
             z-index: 1001;
         }
 
@@ -205,10 +212,10 @@
             }
 
             .fullscreen .image-counter {
-                font-size: 14px;
+                font-size: 12px; /* Reduced by 2px */
                 padding: 3px 8px;
-                bottom: 15px;
-                z-index: 1001;
+                top: 5px;
+                right: 5px;
             }
 
             .fullscreen .control-panel {
